--- a/Exploratory-Data-Analysis/Exploratory-Data-Analysis-EV.Rmd
+++ b/Exploratory-Data-Analysis/Exploratory-Data-Analysis-EV.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Exploratory-Data-Analysis-EV"
-author: "Mino Karadzhov", "Jonas Brockmöller"
-date: "14/01/2022"
 output: html_document
+# author: "Mino Karadzhov", "Jonas Brockmöller"
+# date: "14/01/2022"
 ---
 
 ```{r setup, include=TRUE}
@@ -29,6 +29,7 @@ ev <- read_csv("ElectricCarData.csv")
 ```{r}
 summary(ev)
 ```
+
 The above summary provides us with a general overview of our data. This is helpful, as the overall view gives us useful information about the different variables and observations. The same can be useful, when determining the variables of interest for our analysis.
 
  
@@ -45,6 +46,7 @@ fiveCommonBrands <- ev %>%
   head(5) %>%
   print()
 ```
+
 From the above tabular view, we can gain insights, regarding how much models are represented per each car brand. After arranging the same in a descending order, we can see the five brands that have the biggest number of models in the dataset. The same will have the following view on a plot:
 
 ```{r}
@@ -53,6 +55,7 @@ fiveCommonBrands %>%
   geom_bar(stat = "summary", fun.y = "mean") +
   ggtitle("Five most-common car brands in the data")
 ```
+
 From the above diagram, we can easily distinguish Tesla as the most-common brand in the dataset, followed by Audi.
 
 ### What is the most common vehicle bodystyle? 
@@ -61,6 +64,7 @@ ev %>%
   ggplot(mapping = aes(x=BodyStyle)) +
   geom_bar()
 ```
+
 As it can be seen above a electric model for exists for every bodytype. Although it seems obvious that the SUV and hatchback style is the most common. The reason for the success of electric hatchbacks could be related to the efficiency and / or the price, which will be investigated later.
 
 ### What is the most-common plugtype?
@@ -69,6 +73,7 @@ ev %>%
   ggplot(mapping = aes(x=PlugType)) +
   geom_bar()
 ```
+
 From theoretical knowledge, we are aware that the Type 2 CSS plug is standard equipment in the EU so it is no surprise that this plugtype is by far the most common one.
 
 ##What is the ratio of vehicles that is equipped with RapidCharge?
@@ -77,6 +82,7 @@ From theoretical knowledge, we are aware that the time required for charging an 
   ggplot(ev, aes(x = RapidCharge)) +
   geom_bar()
 ```
+
 It appears that the vast majority of Vehicles do have RapidCharge.
 
 ## Analysing the Co-variations between variables
@@ -88,6 +94,7 @@ From theoretical knowledge, we may expect RapidCharge vehicles to be heavier, co
 ggplot(ev, aes(x = RapidCharge, y = AccelSec)) +
   geom_boxplot()
 ```
+
 It appears they actually do! Unforntunately we do not have data on the weight of the vehicle, otherwise we could have investigated futher here. We also need to take into account the fact that the number of vehicles without RapidCharge is much lower than the other group.
 
 ### How does the Battery Pack size affect the range ?
@@ -98,7 +105,9 @@ Furthermore, we are aware that the different vehicle models in our underlying da
   geom_point() +
   geom_smooth()
 ```
+
 Indeed, we can clearly see a positive correlation between the two variables, which means that our assumption can be taken as a valid one. However, it is worth taking into account the fact that there is a high chance that the observed vehicles differ in weight.
+
 ### Do vehicles with certain powertrain accelerate faster? - there is some interest here
 ```{r}
   ggplot(ev, aes(x = PowerTrain, y = AccelSec)) +
@@ -114,38 +123,19 @@ ev2 <- ev2 %>% filter(BodyStyle != "Station")
 ev2 <- ev2 %>% filter(BodyStyle != "MPV")
 ev2 <- ev2 %>% filter(Battery_Pack_Kwh <= 100)
 
-
-
 ggplot(ev2, aes(x=Battery_Pack_Kwh, y=FastCharge_KmH)) +
 geom_point() +
-geom_smooth()
-
-
-
-ggplot(ev2, aes(x=Battery_Pack_Kwh, y=FastCharge_KmH, color=BodyStyle, group = BodyStyle)) +
-geom_point()
-
-ggplot(ev2, aes(x=Battery_Pack_Kwh, y=FastCharge_KmH)) +
-geom_point() +
-  facet_wrap(vars(BodyStyle))
+geom_smooth(method='lm')
 ```
-The graphs above show that the fast charging rate is affected by the battery pack size. Further graphs show that especially SUVs with batteries bigger than 75 KwH are out of line with the other body styles.
+
+The graphs above show that the fast charging rate is affected by the battery pack size. The bigger the battery is, the faster is the cars peak charging rate.
 
 ### 2. Which company produces the on average longest range vehicles?
 ```{r}
-ev2 <- ev %>% filter(BodyStyle != "SPV")
-ev2 <- ev2 %>% filter(BodyStyle != "Station")
-ev2 <- ev2 %>% filter(BodyStyle != "MPV")
-ev2 <- ev2 %>% filter(Range_Km <= 500)
-
-
-
-data_histogram <- ev2 %>%
+data_histogram <- ev %>%
 mutate(Brand = factor(Brand)) %>%
 group_by(Brand) %>%
 summarize(mean_range = round(mean(Range_Km), 2))
-
-
 
 ggplot(data_histogram, aes(x = Brand, y = mean_range)) +
 geom_bar(stat = "identity") +
@@ -157,7 +147,8 @@ theme_classic() +
 coord_flip() +
 xlab("Brand") + ylab("average range")
 ```
-The histogram above shows that CUPRA produces the cars with the longest average range with 425 km, followed by Tesla (420km), Polestar (400 km) and Ford (395 km). Smart has the cars with the on average shortest range with 96.67 km.
+
+The histogram above shows that Lucid produces the cars with the longest average range with 610 km, followed by Lightyear (575km), Tesla (501 km) and Cupra (425 km). Smart has the cars with the on average shortest range with 96.67 km.
 
 ### 3. How does the efficiency of the car affect the 0-100 acceleration times?
 ```{r}
@@ -165,23 +156,12 @@ ggplot(ev, aes(x=Efficiency_WhKm, y=AccelSec)) +
 geom_point() +
 geom_smooth()
 
-
-
-ggplot(ev, aes(x=Efficiency_WhKm, y=AccelSec, color=BodyStyle, group = BodyStyle)) +
-geom_point()
-
-ggplot(ev, aes(x=Efficiency_WhKm, y=AccelSec)) +
-geom_point() +
-facet_wrap(vars(BodyStyle))
-
-
-ev2 <- ev %>% filter(BodyStyle != "SPV")
-ev2 <- ev2 %>% filter(BodyStyle != "Station")
-ev2 <- ev2 %>% filter(BodyStyle != "MPV")
-ggplot(ev2, aes(x=Efficiency_WhKm, y=AccelSec, color=BodyStyle, group = BodyStyle)) +
-geom_boxplot()
+# ggplot(ev, aes(x=Efficiency_WhKm, y=AccelSec)) +
+# geom_point() +
+# facet_wrap(vars(BodyStyle))
 ```
-As it can be seen above there are many efficient cars that accelerate slowly, but the trend is not as obvious as expected. But for many cars it is true that the more efficient the slower the car accelerates. But there are many outliers to this rule.
+
+As it can be seen above it can generally be said that that the less efficient a car is, the faster it can accelerate. Which makes sense, sports cars are quick but the driver cares less about efficiency and on the other hand the efficient cars are not made to keep up with a sports car.
 
 ### 4. Do all cars with a range above the average have the ability to fast charge?
 ```{r}
@@ -189,7 +169,8 @@ ggplot(ev, aes(x=PriceEuro, y=Range_Km, color = RapidCharge)) +
 geom_point() +
 geom_line(data=ev, aes(PriceEuro, mean(ev$Range_Km)))
 ```
-The scatterplot clealy shows that there is no ar with a range above the average that does not support  fast charging.
+
+The scatter plot clearly shows that no car with a range above the average supports fast charging.
 
 ### 5. Does the battery pack size have a negative impact on efficiency?
 ```{r}
@@ -198,58 +179,13 @@ ev2 <- ev2 %>% filter(BodyStyle != "Station")
 ev2 <- ev2 %>% filter(BodyStyle != "MPV")
 ev2 <- ev2 %>% filter(Battery_Pack_Kwh <= 100)
 
-
-
 ggplot(ev2, aes(x=Battery_Pack_Kwh, y=Efficiency_WhKm)) +
 geom_point() +
 geom_smooth()
 
-
-
-ggplot(ev2, aes(x=Battery_Pack_Kwh, y=Efficiency_WhKm, color=BodyStyle, group = BodyStyle)) +
-geom_point()
-
 ggplot(ev2, aes(x=Battery_Pack_Kwh, y=Efficiency_WhKm)) +
 geom_point() + 
 facet_wrap(vars(BodyStyle))
-
-```
-The line in the scatter plot shows a clear trend, that the bigger the battery is, the less effient the car drives. Although this can have more reasons than just the battery pack size which will be investigated in the following:
-
-### 6. Does the body style affect the range of the vehicle?
-```{r}
-ev2 <- ev %>% filter(BodyStyle != "SPV")
-ev2 <- ev2 %>% filter(BodyStyle != "Station")
-ev2 <- ev2 %>% filter(BodyStyle != "MPV")
-
-ggplot(ev2, aes(x=as.factor(BodyStyle), y=Range_Km)) +
-geom_boxplot(fill="slateblue", alpha=0.2) +
-xlab("BodyStyle")
-
-### battery pack size relevant here
-ggplot(ev2, aes(x=as.factor(BodyStyle), y=Battery_Pack_Kwh)) +
-geom_boxplot(fill="slateblue", alpha=0.2) +
-xlab("BodyStyle")
-
-ggplot(ev2, aes(x=as.factor(BodyStyle), y=Efficiency_WhKm)) +
-geom_boxplot(fill="slateblue", alpha=0.2) +
-xlab("BodyStyle")
-```
-The three boxsplot graphs above show the distribution of the range, battery pack size and the efficiency per body style. Here it becomes obvious that the body style has a big effect on the efficiency. The high range for Pickups and SUVs can only be reached because of big battery packs. This can be seen when looking at the Sedan vs the SUV. Both body styles have about the same battery pack size, but SUVs are less efficient, which results in less range for the SUV.
-
-
-### 7. What body type are the quickest accelerating cars?
-```{r}
-ev2 <- ev %>% filter(BodyStyle != "SPV")
-ev2 <- ev2 %>% filter(BodyStyle != "Station")
-ev2 <- ev2 %>% filter(BodyStyle != "MPV")
-ggplot(ev2, aes(x=AccelSec, y=BodyStyle)) +
-geom_boxplot()
-```
-Sedans are mostly the quickest accelerating cars. But a cabrio is the fastest car in this dataset. 
-
-```{r}
-summary(ev)
 ```
 
-
+The line in the scatter plot shows a clear trend, that the bigger the battery is, the less efficient the car drives. It gets even more interesting when looking at the results per Bodystyle. This graph also supports the theory that the bigger the battery is the more power the car consumes while driving, but it is also visible that especially the SUV style is very efficient. This most likely comes from its less aerodynamic shape. 
